--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <html>
 	<head>
+		<style>
+			h1 {
+				font-family: Sans-serif;
+			}
+			a {
+				font-family: Sans-serif;
+				background-color: Blue;
+				border-radius: 30px;
+			}
+			a:hover {
+				border-radius: 50% 20% / 10% 40%;
+			}
+		</style>
 	</head>
 	<body>
-		<h6>Test Page</h6>
+		<h1>Test Page</h6>
 	</body>
 </html>
