--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 				font-family: Sans-serif;
 				background-color: Blue;
 				border-radius: 30px;
+				size: 12px;
 			}
 			a:hover {
 				border-radius: 50% 20% / 10% 40%;
+				size: 15px;
 			}
 		</style>
 	</head>
