--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 				font-family: Sans-serif;
 				background-color: Blue;
 				border-radius: 30px;
-				size: 12px;
+				size: 15px;
 			}
 			a:hover {
 				border-radius: 50% 20% / 10% 40%;
-				size: 15px;
+				size: 25px;
 			}
 		</style>
 	</head>
 	<body>
 		<h1>Test Page</h6>
-		<a href="google.com">Test!</a>
+		<a href="google.com">Test2!</a>
 	</body>
 </html>
