--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<style>
-			h1 {
-				font-family: Sans-serif;
-			}
-			a {
-				font-family: Sans-serif;
-				background-color: Blue;
-				border-radius: 30px;
-				size: 15px;
-			}
-			a:hover {
-				border-radius: 50% 20% / 10% 40%;
-				size: 25px;
-			}
-		</style>
-	</head>
-	<body>
-		<h1>Test Page</h6>
-		<a href="google.com">Test2!</a>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modern Web Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #3498db;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #fff;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        a.button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        a.button:hover {
+            background-color: #2980b9;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Modern Web Page</h1>
+    </header>
+    <div class="container">
+        <h2>Welcome to our modern web page!</h2>
+        <p>This is a sample modern web page with improved styling.</p>
+        <a class="button" href="https://www.google.com">Visit Google</a>
+    </div>
+</body>
 </html>
