--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
         a.button:hover {
             background-color: #2980b9;
