--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
-        a.button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        a.button:hover {
-            background-color: #2980b9;
-        }
+a.button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Added box-shadow transition */
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1); /* Added box shadow */
+}
+
+a.button:hover {
+    background-color: #2980b9;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); /* Increased shadow on hover */
+}
+
     </style>
 </head>
 <body>
