--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Web Page</title>
+    <title>OS-Layout official Web site</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,9 +50,9 @@ a.button:hover {
         <h1>Modern Web Page</h1>
     </header>
     <div class="container">
-        <h2>Welcome to our modern web page!</h2>
-        <p>This is a sample modern web page with improved styling.</p>
-        <a class="button" href="https://www.google.com">Visit Google</a>
+        <h2>Welcome to OS-Layout's web page!</h2>
+        <p>Test Page205</p>
+        <a class="button" href="https://www.youtube.com/@OS-Layout">Visit my youtube</a>
     </div>
 </body>
 </html>
