--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>OS-Layout official Web site</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: sans-serif, Arial;
+            background-color: #1ecbe1;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #3498db;
+            background-color: #ff8600;
             padding: 20px;
             text-align: center;
         }
@@ -47,7 +47,7 @@ a.button:hover {
 </head>
 <body>
     <header>
-        <h1>Modern Web Page</h1>
+        <h1>This web Site is in Beta.</h1>
     </header>
     <div class="container">
         <h2>Welcome to OS-Layout's web page!</h2>
